# health-master

./: .air.toml  .bazelrc  .dockerignore  .env.example  .gitignore  BUILD.bazel  CLAUDE.md  Containerfile  Dockerfile  Makefile  README.md  WORKSPACE  deps.bzl  docker-compose.yml  github.Dockerfile  go.mod  go.sum  install_githooks.sh  main.go  migrate.go  renovate.json  run.sh
cmd/: BUILD.bazel  migrate.go
cmd/migrate/: down.go  root.go  up.go
configs/: db.yaml  (+1 more)
global/: BUILD.bazel  db.go  jwt.go  logger.go  mailer.go  redis.go  setting.go
internal/api/: BUILD.bazel  auth.go  deps.go  password_reset.go  ping.go  role.go  statistics.go  token.go  twofactor.go  user.go  user_blood_pressure.go  user_height.go  users_temperatures.go  weight_record.go
internal/db/: BUILD.bazel  conn.go  db.go  transaction.go
internal/model/: BUILD.bazel  auth.go  input.go  response.go  role.go  statistics.go  swagger.go  token.go  token_record.go  twofactor.go  user.go  user_blood_pressure.go  user_height.go  user_role.go  user_temperature.go  weight.go
internal/repository/: BUILD.bazel  reposistory.go  role.go  token_record.go  user.go  user_blood_pressure.go  user_height.go  user_role.go  user_temperature.go  weight_record.go
internal/routers/: BUILD.bazel  router.go
internal/service/: BUILD.bazel  auth.go  redis.go  role.go  service.go  statistics.go  token.go  twofactor.go  user.go  user_blood_pressure.go  user_height.go  users_temperatures.go  weight_record.go
pkg/migrate/: BUILD.bazel  create.go  fix.go  root.go  up.go
pkg/setting/: BUILD.bazel  section.go  setting.go
web/: .dockerignore  .env  .env.example  .eslintrc.js  .eslintrc.json  .gitignore  BUILD.bazel  Containerfile  Dockerfile  eslint.config.mjs  next.config.js  next.config.ts  package-lock.json  package.json  prettier.config.mjs  proxy.ts  tsconfig.json
web/app/: fonts.ts  globals.css  layout.tsx  page.tsx  provider.tsx  providers.tsx
web/app/(auth)/: layout.tsx
web/app/(auth)/2fa/: page.tsx
web/app/(auth)/forget-password/: page.tsx
web/app/(auth)/login/: loading.tsx  page.tsx
web/app/(auth)/register/: page.tsx
web/app/(auth)/reset-password/: page.tsx
web/app/(auth)/sign-in/: page.tsx
web/app/(auth)/sign-up/: page.tsx
web/app/(protected)/: layout.tsx  page.tsx
web/app/(protected)/blood-pressure/: layout.tsx  loading.tsx  page.tsx
web/app/(protected)/blood-pressure-new/: layout.tsx  loading.tsx  page.tsx
web/app/(protected)/dashboard/: layout.tsx  loading.tsx  page.tsx
web/app/(protected)/profile/: loading.tsx  page.tsx
web/app/(protected)/settings/: loading.tsx
web/app/(protected)/temperature/: layout.tsx  page.tsx
web/app/(protected)/temperature-new/: layout.tsx  page.tsx
web/app/(protected)/weight/: layout.tsx  loading.tsx  page.tsx
web/app/(protected)/weight-new/: layout.tsx  page.tsx
web/app/api/current-user/: route.ts
web/app/api/login/: route.ts  route.tsx
web/app/api/user-blood-pressure/: route.ts
web/app/api/user-blood-pressures/: route.ts
web/app/api/user-temperature/: route.ts
web/app/api/user-temperatures/: route.ts
web/app/api/user-weight-records/: route.ts
web/app/dashboard/: page.tsx
web/app/login/: page.tsx
web/app/register/: page.tsx
web/components/: add-user-blood-pressure.tsx  add-weight-modal.tsx  app-breadcrumb.tsx  app-sidebar.tsx  aside.tsx  auth-provider.tsx  blood-pressure-table.tsx  browser-link.tsx  chart-area-interactive.tsx  create-blood-pressure-form.tsx  create-temperature-form.tsx  create-weight-form.tsx  data-table.tsx  date-picker-input.tsx  delete-user-blood-pressure.tsx  delete-weight-record-action.tsx  fonts.tsx  forget-password-form.tsx  header.tsx  health-charts.tsx  layout.tsx  link.tsx  login-form.tsx  nav-documents.tsx  nav-main.tsx  nav-secondary.tsx  nav-user.tsx  navbar.tsx  password-input.tsx  picker.tsx  profile-form.tsx  protect-route.tsx  registry-form.tsx  reset-password-form.tsx  section-cards.tsx  security-card.tsx  security-item.tsx  site-header.tsx  statistics-cards.tsx  time-picker-input.tsx  (+10 more)
web/components/actions/: forget-password.ts  profile.ts  reset-password.ts  statistics.ts  user-blood-pressure.ts  user.ts
web/components/auth/: auth-required.tsx
web/components/confirm/: index.tsx
web/components/icons/: CalendarIcon.tsx  HamburgerIcon.tsx  ViewIcon.tsx  index.ts
web/components/loading/: global-loading.tsx
web/components/pagination/: index.tsx
web/components/paginator/: index.tsx
web/components/picker/: picker-colum.tsx  picker.tsx
web/components/sidebar/: context.tsx  header.tsx  index.tsx  item.tsx
web/components/table/: header.tsx
web/components/two-factor-card/: index.ts  setup-view.tsx  two-factor-card.tsx
web/components/ui/: badge.tsx  calendar.tsx  card.tsx  chart.tsx  color-mode.tsx  drawer.tsx  dropdown-menu.tsx  form.tsx  input-group.tsx  provider.tsx  radio-group.tsx  select.tsx  sidebar.tsx  sonner.tsx  spinner.tsx  table.tsx  toggle-group.tsx  toggle.tsx
web/hooks/: useSystemColorMode.ts
web/leacy-pages/: _document.tsx  dashboard.tsx  login.tsx  profile.tsx  register.tsx
web/leacy-pages/api/: current-user.ts  login.ts  user.ts  user_blood_pressures.ts
web/lib/: auth-options.ts  download-file.ts  fn.ts  http-client.ts  jwt.ts  redux-hooks.ts  request.ts  response.ts  theme.ts  token.ts  twofactor.ts  weight-record.ts
web/lib/featcher/: fetch-weight.ts  fetchWeightRecords.ts  index.ts
web/pages/: _app.tsx  _document.tsx  dashboard.tsx  index.tsx  login.tsx  profile.tsx  register.tsx  test-layout.tsx
web/pages/api/: current-user.ts  login.ts  token.ts  user.ts  user_blood_pressure.ts  user_blood_pressures.ts
web/scripts/: build-docker.sh
web/slices/: user-blood-pressure-slice.ts  user-slice.ts
web/store/: index.ts  store.ts
web/store/user/: index.ts
web/store/user-blood-pressure/: index.ts
web/styles/: _view-transition.scss  globals.scss  reset.scss
web/type/: response.ts  token.ts  user-blood-pressure.ts  user.ts
web/types/: request.ts  response.ts  statistics.ts  user-blood-pressure.ts  user-temperature.ts  user.ts  weight-record.ts
(+235 files in other folders)
