load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "global",
    srcs = [
        "db.go",
        "jwt.go",
        "setting.go",
    ],
    importpath = "github.com/damingerdai/health-master/global",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/setting",
        "@io_gorm_gorm//:go_default_library",
    ],
)
