load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "api",
    srcs = [
        "token.go",
        "user.go",
        "user_blood_pressure.go",
    ],
    importpath = "github.com/damingerdai/health-master/internal/api",
    visibility = ["//:__subpackages__"],
    deps = [
        "//global",
        "//internal/model",
        "//internal/repository",
        "//internal/service",
        "@com_github_gin_gonic_gin//:gin",
        "@io_gorm_gorm//:gorm",
    ],
)
