load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "db",
    srcs = ["db.go"],
    importpath = "github.com/damingerdai/health-master/internal/db",
    visibility = ["//:__subpackages__"],
    deps = [
        "//pkg/setting",
        "@io_gorm_driver_postgres//:go_default_library",
        "@io_gorm_gorm//:go_default_library",
    ],
)
