load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "db",
    srcs = ["db.go"],
    importpath = "github.com/damingerdai/health-master/internal/db",
    visibility = ["//:__subpackages__"],
    deps = [
        "//pkg/setting",
        "@io_gorm_driver_postgres//:postgres",
        "@io_gorm_gorm//:gorm",
    ],
)
