load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "model",
    srcs = [
        "token.go",
        "user.go",
        "user_blood_pressure.go",
    ],
    importpath = "github.com/damingerdai/health-master/internal/model",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_golang_jwt_jwt_v4//:jwt"],
)
