load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "repository",
    srcs = [
        "reposistory.go",
        "user.go",
        "user_blood_pressure.go",
    ],
    importpath = "github.com/damingerdai/health-master/internal/repository",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/model",
        "@io_gorm_gorm//:gorm",
    ],
)
