load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "routers",
    srcs = ["router.go"],
    importpath = "github.com/damingerdai/health-master/internal/routers",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/api",
        "@com_github_gin_gonic_gin//:go_default_library",
    ],
)
