load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "migrate",
    srcs = [
        "create.go",
        "down.go",
        "root.go",
        "up.go",
    ],
    importpath = "github.com/damingerdai/health-master/pkg/migrate",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/util",
        "//pkg/util/files",
        "//pkg/util/paths",
        "//pkg/util/times",
        "@com_github_golang_migrate_migrate_v4//:migrate",
        "@com_github_golang_migrate_migrate_v4//database/postgres",
        "@com_github_golang_migrate_migrate_v4//source/file",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
    ],
)
