load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "setting",
    srcs = [
        "section.go",
        "setting.go",
    ],
    importpath = "github.com/damingerdai/health-master/pkg/setting",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/util",
        "@com_github_spf13_viper//:go_default_library",
    ],
)
